...

                    }

                    item {
                        Spacer(Modifier.height(8.dp))
                        Text(
                            text = "Followers",
                            style = TextStyle(
                                fontSize = 16.sp,
                                fontWeight = FontWeight.SemiBold,
                                color = Color.Black
                            )
                        )
...
                    .size(100.dp),
                contentDescription = null
            )
            Spacer(modifier = Modifier.width(8.dp))
            Column(verticalArrangement = Arrangement.Center) {
                Text(
                    modifier = Modifier.testTag("Name"),
                    text = user?.name ?: user?.login ?: "Null",
                    style = TextStyle(
                        fontSize = 22.sp,
                        fontWeight = FontWeight.Bold
                    )
                )
...
